[update][fix] Fixed html input elements limits. (#4)
-- Added name, min, max and size attributes.
-- Added "/>" to close every img and input elements.
-- Set name attributes to "cash".
-- Fixed they values to min="1", max="999999" and size="6" in every input elements.

--- a/brcash_calc.htm
+++ b/brcash_calc.htm
@@ -12,23 +12,23 @@
     <section>
       <h1>Calculadora de Troco</h1>
       <article>
-        <div>Digite a quantia que quer trocar:</div><br><input type="number" size="7" maxlength="7">
+        <div>Digite a quantia que quer trocar:</div><br><input type="number" name="cash" min="1" max="999999" size="6" />
         <br>
         <br>
         <br>
         <div class="tabela">
-          <div class="nota"><img src="img/2_Brazil_real_Second_Reverse.jpg" alt="2 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/5_Brazil_real_Second_Reverse.jpg" alt="5 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/10_Brazil_real_Second_Reverse.jpg" alt="10 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/20_Brazil_real_Second_Reverse.jpg" alt="20 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/50_Brazil_real_Second_Reverse.jpg" alt="50 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/100_Brazil_real_Second_Reverse.jpg" alt="100 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="nota"><img src="img/200_Brazil_real_Second_Reverse.jpg" alt="200 reais"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="moeda"><img src="img/Moeda_de_5_centavos_da_2a_geracao.png" alt="5 centavos"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="moeda"><img src="img/Moeda_de_10_centavos_da_2a_geracao.png" alt="10 centavos"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="moeda"><img src="img/Moeda_de_25_centavos_da_2a_geracao.png" alt="25 centavos"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="moeda"><img src="img/Moeda_de_50_centavos_da_2a_geracao.png" alt="50 centavos"><br><input type="number" size="7" maxlength="7"></div>
-          <div class="moeda"><img src="img/Moeda_de_1_real_da_2a_geracao.png" alt="1 real"><br><input type="number" size="7" maxlength="7"></div>
+          <div class="nota"><img src="img/2_Brazil_real_Second_Reverse.jpg" alt="2 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/5_Brazil_real_Second_Reverse.jpg" alt="5 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/10_Brazil_real_Second_Reverse.jpg" alt="10 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/20_Brazil_real_Second_Reverse.jpg" alt="20 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/50_Brazil_real_Second_Reverse.jpg" alt="50 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/100_Brazil_real_Second_Reverse.jpg" alt="100 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="nota"><img src="img/200_Brazil_real_Second_Reverse.jpg" alt="200 reais" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="moeda"><img src="img/Moeda_de_5_centavos_da_2a_geracao.png" alt="5 centavos" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="moeda"><img src="img/Moeda_de_10_centavos_da_2a_geracao.png" alt="10 centavos" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="moeda"><img src="img/Moeda_de_25_centavos_da_2a_geracao.png" alt="25 centavos" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="moeda"><img src="img/Moeda_de_50_centavos_da_2a_geracao.png" alt="50 centavos" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
+          <div class="moeda"><img src="img/Moeda_de_1_real_da_2a_geracao.png" alt="1 real" /><br><input type="number" name="cash" min="1" max="999999" size="6" /></div>
         </div>
       </article>
     </section>
