[update][fix] Fixed main html input element; added js main code. (#5)
-- Added id attribute id="totalchange" on first input.
-- Added js code to allow only number on input elements.
-- Warning: function filterText still need improvement.

--- a/brcash_calc.htm
+++ b/brcash_calc.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/stylus.css">
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer ></script>
     <title>Calculadora de Troco</title>
   </head>
 <body>
@@ -12,7 +12,7 @@
     <section>
       <h1>Calculadora de Troco</h1>
       <article>
-        <div>Digite a quantia que quer trocar:</div><br><input type="number" name="cash" min="1" max="999999" size="6" />
+        <div>Digite a quantia que quer trocar:</div><br><input type="number" id="totalchange" name="cash" min="1" max="999999" size="6" />
         <br>
         <br>
         <br>
