[update][fix] Fixed html defer attribute; modified filterText function
-- Solved filterText function limitations; now input elements truly accept only numbers
-- Modified function name filterText to onlyNumbers for better code read
-- Fixed defer on brcash_calc.htm

--- a/brcash_calc.htm
+++ b/brcash_calc.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/stylus.css">
-    <script src="js/main.js" defer ></script>
+    <script src="js/main.js" defer="defer" ></script>
     <title>Calculadora de Troco</title>
   </head>
 <body>
